# steno-lookup

./: .gitignore  README.md  package-lock.json  package.json  prepare-release.py  rollup.config.js  server.py
public/: app.webmanifest  helpers.wasm  index.html  serviceworker-release.js  serviceworker.js  testing-ca.crt
src/: App.svelte  App.svelte~  FileLoader.svelte  FileLoader.svelte~  FileUploader.svelte~  FindStroke.svelte  Lookup.svelte  ResultsTable.svelte  ReverseLookup.svelte  ReverseLookup.svelte~  StrokeDisplay.svelte  fileUploader.svelte~  serviceworker-release.js  util.js  wasm-interface.js
wasm/: Cargo.toml  analysis.py  fs.npy  how-to-build  post-build.sh  radixtest.py  rans-test-wtf-is-wrong-here.py  rans-test.py  thoughts
wasm/.cargo/: config
wasm/hashtable/: Cargo.toml
wasm/hashtable/src/: lib.rs
wasm/query-engine/: Cargo.toml
wasm/query-engine/src/: hashtable.rs  lib.rs
wasm/src/: hashtable.rs  lib.rs
wasm/wasm-module/: Cargo.toml
wasm/wasm-module/src/: lib.rs
